# Bulk-Migrator

./: .env.renovate.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint.yaml  =0.15.0  CHANGELOG.md  Makefile  README.md  SECURITY.md  SETUPGUIDE.md  UPGRADE_NOTES.md  debug_sharepoint.py  docker-compose.renovate.yml  main.py  pyproject.toml  pytest-results.xml  pytest.ini  rebuild_skip_list.py  renovate.env.example  renovate.json  renovate.service  requirements.txt  run_tests.py  sample.env  setup-renovate-service.sh  test_env.py  test_parallel.py
.amazonq/rules/: project-overview.md  quality-rules.md
.github/: README.md  WORKFLOWS.md  copilot-instructions.md  dependabot.yml  secret_scanning.yml
.github/workflows/: README.md  dependabot-auto-merge.yml  pr-quality-gate.yml  prepare-release.yml  quality-check.yml  release.yml  security-scan.yml
.kiro/specs/code-quality-improvement/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
config/: config.json  security_policy.json
doc/: Bulk-Migration-1stPLOT.md  MultiLayerProcess.md  PROJECT_STRUCTURE_STATUS.md  RENOVATE_SETUP.md  continuous_improvement_process.md  operational_procedures.md  quality_checklist.md  rewrite_implementation_plan.md  rollback_plan.md  security_procedures.md  setup_assistant_plan.md
doc/old/: BATCH_OPERATION_PLAN.md  BUSINESS_PROPOSAL.md  COMPLETE_MIGRATION_PLAN_v2.2.md  ENTERPRISE_SCALE_TEST_PLAN.md  FILE_STRUCTURE_AND_PLAN.md  FINAL_SYSTEM_STATUS_REPORT.md  GRAPH_API_GUIDE.md  GRAPH_API_INTEGRATION_REPORT.md  IMPLEMENTATION_ORDER.md  IMPROVEMENT_PLAN_2025.md  ISSUES-rt.md  ISSUES.md  LARGE_FILE_PROOF_REPORT.md  LARGE_FILE_TRANSFER_TEST_REPORT.md  LOG_CLEANUP_IMPLEMENTATION_REPORT.md  PHASE8_IMPLEMENTATION_SUMMARY.md  README-rt.md  README.md  REFACTORING_PLAN.md  RELEASE_NOTES.md  SECURE_SETUP_GUIDE.md  SECURITY_ENHANCEMENT_REPORT.md  SETUP_GUIDE.md  SETUP_TEST_REPORT.md  SYSTEM_CLEANUP_COMPLETE_REPORT.md  Specification-2.md  Specification.md  V2.1_COMPLETION_REPORT.md  problem_analysis.md  quality-improvement-plan.md  システム全体の目的.md
scripts/: check_actions_cli.py  check_github_actions.py  run_codeql.ps1  run_codeql.sh  run_quality.py  security_check.py  security_scan.py  test-cov.bat  test.bat
src/: __init__.py  auth.py  config_manager.py  file_crawler.py  file_crawler_cli.py  filelock.py  logger.py  main.py  quality_alerts.py  quality_metrics.py  rebuild_skip_list.py  security_audit.py  security_integration.py  skiplist.py  structured_logger.py  transfer.py  watchdog.py
src/utils/: find_and_delete_renamed_folders.py
tests/: analyze_single_file_log.py  collect_transfer_success_stats_v2.py  compare_entry_detail.py  compare_filelist_vs_log.py  compare_transfer_targets.py  conftest.py  debug_file_access.py  debug_onedrive_actual.py  debug_onedrive_structure.py  debug_sharepoint_structure.py  file_crawler.py  file_crawler_cli.py  generate_onedrive_filelist.py  integration_test.py  rebuild_skiplist_from_sharepoint.py  test_auth.py  test_config_manager.py  test_filelock.py  test_full_skip.py  test_logger.py  test_main.py  test_quality_alerts.py  test_quality_metrics.py  test_rebuild_skip_list.py  test_security_scan.py  test_settings.py  test_single_transfer.py  test_skip_processing.py  test_skiplist.py  test_skiplist_vs_targets.py  test_structured_logger.py  test_transfer.py  test_transfer_list.py  test_watchdog.py  テスト手順書.md
tests/integration/: integration_test.py
tests/security/: test_security_scan.py
tests/unit/: test_auth.py  test_config_manager.py  test_filelock.py  test_logger.py  test_main.py  test_quality_alerts.py  test_quality_metrics.py  test_rebuild_skip_list.py  test_settings.py  test_skiplist.py  test_structured_logger.py  test_transfer.py  test_watchdog.py
utils/: __init__.py  collect_onedrive_skiplist_stats.py  collect_stats.py  collect_transfer_success_stats.py  collect_transfer_success_stats_v2.py  compare_entry_detail.py  file_crawler.py  file_crawler_cli.py  investigate_structure.py  predict_completion.py  remove_empty_files.py  verify_skiplist_vs_sharepoint.py  verify_transfer.py  verify_transfer_log.py  watchdog.py
