[project]
name = "bulk-migrator"
version = "2.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.34.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ruff>=0.14.9",
    "mypy>=1.19.0",
    "types-requests>=2.32.4.20250913",
    "pre-commit>=4.5.0",
    "bandit[toml]>=1.9.2",
    "safety>=3.7.0",
    "cryptography>=46.0.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "yamllint>=1.37.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["logs/", ".venv/", "build/", ".mypy_cache/", ".pytest_cache/", ".ruff_cache/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C90", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# 段階的厳格化: staging で追加設定を有効化
# disallow_any_generics = true  # staging で有効化予定
# warn_return_any = true        # staging で有効化予定
# strict_equality = true        # staging で有効化予定

# ローカルモジュールの import エラーを無視
[[tool.mypy.overrides]]
module = [
    "config_manager",
    "logger",
    "structured_logger",
    "transfer",
    "skiplist",
    "rebuild_skip_list",
    "src.*",
    "msal"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/security"]
python_files = ["test_*.py"]
addopts = [
    "--junit-xml=pytest-results.xml",
    "-v",
    "-n=auto"
]
markers = [
    "unit: 単体テスト",
    "integration: 統合テスト",
    "auth: 認証関連テスト",
    "transfer: ファイル転送テスト",
    "config: 設定関連テスト"
]
[tool.bandit]
exclude_dirs = ["tests", ".venv", "build"]
skips = ["B101"]  # assert_used - テストで使用するため除外

[tool.bandit.assert_used]
skips = ["**/test_*.py", "**/tests/**"]
